swap back homepage URL

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/manhin1997/pizza-time",
+  "homepage": "http://manhin1997.github.io/pizza-time",
   "name": "pizza-time",
   "version": "0.1.0",
   "private": true,
